AC_INIT(src)

AM_CONFIG_HEADER(src/config.h)
AM_INIT_AUTOMAKE(SpeedX,0.1.3b)

AC_PROG_CC
AC_STDC_HEADERS
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

CFLAGS=" -g -Wall -pedantic -Wunused -O3"
AC_SUBST(CFLAGS)

if test "`libmikmod-config --version 2>/dev/null`" != ""
then
	AC_DEFINE(LIBMIKMOD)

	INCLUDES=`libmikmod-config --cflags` $INCLUDES
	AC_SUBST(INCLUDES)

	LIBS=`libmikmod-config --libs` $LIBS
	AC_SUBST(LIBS)
fi

if test "`uname`" = "Linux"
then
	AC_DEFINE(TIMEVAL)
	AC_DEFINE(MITSHM)
fi

AC_DEFINE_UNQUOTED(DATADIR, "$DESTDIR", [Data directory])

AC_OUTPUT(
Makefile
src/Makefile
src/bin/Makefile
src/background/Makefile
src/cars/Makefile
src/cars/camion/Makefile
src/cars/f1_1/Makefile
src/cars/Panorama/Makefile
src/cars/jeep/Makefile
src/music/Makefile
src/num/Makefile
src/road/Makefile
src/scene/Makefile
)

