desktopdir = /usr/share/applications
dist_desktop_DATA = ballandpaddle.desktop 
pixmapsdir = /usr/share/pixmaps
dist_pixmaps_DATA = ballandpaddle_160x160.xpm
SUBDIRS = po src
dist_doc_DATA = README NEWS ChangeLog doc/fdl.texi
fontdir = $(pkgdatadir)
dist_font_DATA = FreeSans.ttf
imgdir = $(pkgdatadir)/images
dist_img_DATA = images/menuback.xcf images/splash.xcf images/menuback.png images/splash.png images/helpscreen.png
levelsdir = $(pkgdatadir)/levels
dist_levels_DATA = levels/utils.scm
savannahdir = $(pkgdatadir)/levels/savannah
dist_savannah_DATA = levels/savannah/bonustick.wav levels/savannah/ballhitwall.wav levels/savannah/blockbreak.wav levels/savannah/laser.wav levels/savannah/ball.png levels/savannah/blocks.png levels/savannah/laser.png levels/savannah/paddle.png levels/savannah/powerups.png levels/savannah/initialize.scm levels/savannah/level1.scm levels/savannah/meditate.png levels/savannah/skin.png levels/savannah/3d-gnu.png levels/savannah/level2.scm levels/savannah/level3.scm levels/savannah/listen.png levels/savannah/dale_mellor.png levels/savannah/level4.scm levels/savannah/BabyGnu.png levels/savannah/level5.scm levels/savannah/level6.scm levels/savannah/reiss-head.png levels/savannah/bonus.png levels/savannah/gameover.png
tangodir = $(pkgdatadir)/levels/tango
dist_tango_DATA = levels/tango/bonustick.wav levels/tango/ballhitwall.wav levels/tango/blockbreak.wav levels/tango/laser.wav levels/tango/ball.png levels/tango/blocks.png levels/tango/laser.png levels/tango/paddle.png levels/tango/powerups.png levels/tango/initialize.scm levels/tango/level1.scm levels/tango/background.png levels/tango/skin.png levels/tango/bonus.png levels/tango/gameover.png
levelsetdir = $(pkgdatadir)
dist_levelset_DATA = levelsets
dist_man1_MANS = doc/ballandpaddle.man
info_TEXINFOS = doc/ballandpaddle.texi

EXTRA_DIST = config.rpath m4/ChangeLog

ACLOCAL_AMFLAGS = -I m4

