# Configuration for bool
#
# Marc Tardif <intmktg@cam.org>
#
dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/bool.c)

dnl Automake stuff
AM_INIT_AUTOMAKE(bool, 0.2)
AM_CONFIG_HEADER(config.h:config.hin)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_CHECK_TYPE(ssize_t, int)
AC_C_CONST

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(string.h stdlib.h unistd.h)

dnl Checks for functions
AC_CHECK_FUNCS(memmove strerror)

AC_OUTPUT(Makefile doc/Makefile src/Makefile tests/Makefile)
