#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
#
# configure.ac: This is a base file to generate configure script for `Dionysus'.
# This file is part of the `pem' project version 1.0.0
# Copyright (C) 2009 Jean Michel Sellier
#
# `dionysus' is a free software; you can redistribute it and/or modify it under
# the terms of GNU General Public License as published by the Free software
# Foundation; either version 3 of the license, or(at your option) any later
# version.
#
# `dionysus' is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along
# with `dionysus'; if not, see: <http://www.gnu.org/licenses>.
#

AC_PREREQ(2.61)
AC_INIT([dionysus], [1.3.0], [jeanmichel.sellier@gmail.com])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/Tcl_src/dionysus])
AC_CONFIG_HEADER([config.h])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
